// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`valid 1 line 1`] = `
Array [
  Array [
    "let a = 1;",
    Array [
      "let a: int = 1;",
      undefined,
      undefined,
    ],
    Array [
      Array [
        0,
        0,
        0,
      ],
      Array [
        0,
        10,
        10,
      ],
    ],
  ],
]
`;

exports[`valid multiple directive in same line 1`] = `
Array [
  Array [
    "let a = 1;",
    Array [
      "let a: int = 1;",
      undefined,
      undefined,
    ],
    Array [
      Array [
        0,
        0,
        0,
      ],
      Array [
        0,
        10,
        10,
      ],
    ],
  ],
  Array [
    "let b = a + a;",
    Array [
      "let b: int = 2;",
      undefined,
      undefined,
    ],
    Array [
      Array [
        0,
        11,
        11,
      ],
      Array [
        0,
        25,
        25,
      ],
    ],
  ],
]
`;

exports[`valid multiple line 1`] = `
Array [
  Array [
    "type tree = Leaf | Node(int, tree, tree);",
    Array [
      "type tree = Leaf | Node(int, tree, tree);",
      undefined,
      undefined,
    ],
    Array [
      Array [
        0,
        0,
        0,
      ],
      Array [
        0,
        41,
        41,
      ],
    ],
  ],
  Array [
    "let rec sum = (item) => {
  switch (item) {
  | Leaf => 0
  | Node(value, left, right) => value + sum(left) + sum(right);
  }
};",
    Array [
      "let sum: tree => int = <fun>;",
      undefined,
      undefined,
    ],
    Array [
      Array [
        1,
        1,
        43,
      ],
      Array [
        7,
        2,
        171,
      ],
    ],
  ],
  Array [
    "let myTree =
  Node(
    1,
    Node(2, Node(4, Leaf, Leaf), Node(6, Leaf, Leaf)),
    Node(3, Node(5, Leaf, Leaf), Node(7, Leaf, Leaf))
  );",
    Array [
      "let myTree: tree =
  Node(1, Node(2, Node(4, Leaf, Leaf), Node(6, Leaf, Leaf)),
   Node(3, Node(5, Leaf, Leaf), Node(7, Leaf, Leaf)));",
      undefined,
      undefined,
    ],
    Array [
      Array [
        8,
        1,
        173,
      ],
      Array [
        14,
        4,
        314,
      ],
    ],
  ],
  Array [
    "Printf.sprintf(\\"%i\\", sum(myTree));",
    Array [
      "- : string = \\"28\\"",
      undefined,
      undefined,
    ],
    Array [
      Array [
        15,
        1,
        316,
      ],
      Array [
        16,
        34,
        350,
      ],
    ],
  ],
]
`;
